Closed Bug 490173 Opened 15 years ago Closed 15 years ago

Removing display:-moz-popup doesn't make children appear

Categories

(Core :: Layout, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: bzbarsky)

References

Details

(Keywords: testcase)

Attachments

(3 files, 1 obsolete file)

Attached file testcase
      No description provided.
Attached file reference
Attached patch Proposed fix (obsolete) — Splinter Review
What happens here is that the frame is suppressed because there is no root popupgroup... but then when we change the style and go to MaybeRecreateFramesForContent we have no frame and no undisplayed entry, so we don't do anything.  Since a display change can cause us to in fact need a reconstruct, we need an undisplayed entry.

I added the undisplayed setting in the suppress case right above that just in case; I don't see that it can harm anything, and if some of the SVG situations that can cause suppression might depend on style data, it'd help those cases.
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #374993 - Flags: superreview?(dbaron)
Attachment #374993 - Flags: review?(dbaron)
Oh, I suppose I should also write a testcase for the colgroup/column case...
That testcase fails without the patch, passes with.
Attachment #374993 - Attachment is obsolete: true
Attachment #374995 - Flags: superreview?(dbaron)
Attachment #374995 - Flags: review?(dbaron)
Attachment #374993 - Flags: superreview?(dbaron)
Attachment #374993 - Flags: review?(dbaron)
Comment on attachment 374995 [details] [diff] [review]
With a reftest for that too

r+sr=dbaron
Attachment #374995 - Flags: superreview?(dbaron)
Attachment #374995 - Flags: superreview+
Attachment #374995 - Flags: review?(dbaron)
Attachment #374995 - Flags: review+
Pushed http://hg.mozilla.org/mozilla-central/rev/6aa0cb2a52fb
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Er, and somehow I managed to typo the reftest.list lines...  Fixed with http://hg.mozilla.org/mozilla-central/rev/c61fc3216701
Depends on: 492112
Depends on: 492163
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: