Bug 490173.  Switching display from -moz-popup to block in an HTML document doesn't trigger a frame reconstruct.  r+sr=dbaron